--- a/pages/aspirantes.html
+++ b/pages/aspirantes.html
@@ -230,8 +230,8 @@
 
 
 
-    <script src="/widget/js/config.js"></script>
-    <script src="/widget/js/chat-widget.js"></script>
+    <script src="../widget/js/config.js"></script>
+    <script src="../widget/js/chat-widget.js"></script>
 </body>
 
 </html>
