--- a/widget/chat-widget.html
+++ b/widget/chat-widget.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Sitio Web con Chat</title>
-   <link rel="stylesheet" href="/widget/css/chat-widget.css">
+   <link rel="stylesheet" href="../widget/css/chat-widget.css">
 </head>
 <body>
 
 <!-- Widget de Chat - Solo el logo puro -->
-<img src="/widget/assets/Cardi.png" id="chat-logo-button" alt="Abrir chat con CardiBot">
+<img src="../widget/assets/Cardi.png" id="chat-logo-button" alt="Abrir chat con CardiBot">
 
 <div id="chat-widget">
     <div class="chat-header">
         <div class="user-info">
             <div class="avatar">
-                <img src="/widget/assets/CardiBot.png" alt="CardiBot">
+                <img src="../widget/assets/CardiBot.png" alt="CardiBot">
           
             </div>
             <div class="user-details">
@@ -62,10 +62,10 @@
     </div>
 </div>
 
-<script src="/widget/js/config.js"></script>
+<script src="../widget/js/config.js"></script>
 <!-- LLAMADA AL WIDGET -->
 
-<script src="/widget/js/chat-widget.js"></script>
+<script src="../widget/js/chat-widget.js"></script>
 
 </body>
 </html>
