--- a/pages/alumnos.html
+++ b/pages/alumnos.html
@@ -422,8 +422,8 @@
                                          <div class="col-lg-2  portfolio-item col-md-offset-1">
                                             <div class="card h-100">
                                                 CARDIBOT
-                                                <a href="http://localhost:4000/login"><img
-                                                        class="card-img-top img-responsive" src="/widget/assets/CardiBot.png" alt=""
+                                                <a href="https://chatbotview.onrender.com"><img
+                                                        class="card-img-top img-responsive" src="../widget/assets/CardiBot.png" alt=""
                                                         height="150"> </a>  
                                             </div>
                                         </div>
