--- a/pages/padres.html
+++ b/pages/padres.html
@@ -79,8 +79,8 @@
 
 
 
-    <script src="/widget/js/config.js"></script>
-    <script src="/widget/js/chat-widget.js"></script>
+    <script src="../widget/js/config.js"></script>
+    <script src="../widget/js/chat-widget.js"></script>
 
 </body>
 
