mejora de diceño

--- a/widget/chat-widget.html
+++ b/widget/chat-widget.html
@@ -47,6 +47,20 @@
                 <div class="message-time">Ahora</div>
             </div>
         </div>
+           <div class="message bot" id="faqs-message-container">
+            <div class="message-content">
+                <div class="faq-container">
+                    <div class="faq-title">
+                        <span>📋 Preguntas frecuentes</span>
+                    </div>
+                    
+                    <!-- LAS PREGUNTAS SE INYECTAN AQUÍ CON JS -->
+                    <div id="faq-questions-container"></div>
+                    
+                </div>
+                <div class="message-time">Sugerencias</div>
+            </div>
+        </div>
     </div>
 
     <div class="chat-footer">
